--- a/src/app/components/meet-selling/meet-selling.component.html
+++ b/src/app/components/meet-selling/meet-selling.component.html
@@ -2,7 +2,7 @@
     class="mt-10 w-full h-72 flex flex-col gap-8 justify-center items-center bg-[var(--primary)] text-center bg-opacity-60 rounded-xl"
 >
     <h3 class="text-3xl text-black font-['Urbanist'] font-semibold">
-        {{ nbrPaid }} places vendues
+        {{ nbrPaid }} place{{ nbrPaid > 1 ? 's' : '' }} vendu{{ nbrPaid > 1 ? 'es' : '' }}
     </h3>
     <p-avatarGroup styleClass="mb-3">
         <p-avatarGroup styleClass="mb-3">
