fix payment block on retry + comment section update

--- a/src/app/components/comment-form/comment-form.component.html
+++ b/src/app/components/comment-form/comment-form.component.html
@@ -6,5 +6,5 @@
         rows="5"
         class="comment-textarea"
     ></textarea>
-    <button pButton (click)="postComment()" label="Commenter" class="comment-button"></button>
+    <button pButton (click)="postComment()" label="Commenter" class="comment-button mb-1"></button>
 </div>
