--- a/src/app/components/payment-card/payment-card.component.html
+++ b/src/app/components/payment-card/payment-card.component.html
@@ -4,6 +4,7 @@
     [modal]="true"
     [draggable]="false"
     [style]="{ width: '50rem' }"
+    (onHide)="closeDialog.emit()"
     [breakpoints]="{ '1199px': '75vw', '575px': '90vw' }"
 >
     <ng-template pTemplate="content">
