--- a/src/app/container/comments/comments-section/comments-section.component.html
+++ b/src/app/container/comments/comments-section/comments-section.component.html
@@ -2,6 +2,7 @@
     class="flex flex-col"
     [modal]="true"
     [draggable]="false"
+    [showHeader]="false"
     [(visible)]="showDialog"
     (onHide)="onCloseDialog()"
     [baseZIndex]="1000"
@@ -22,7 +23,14 @@
                     fill
                 />
             </div>
-            <div class="flex-[40] flex flex-col">
+            <div class="flex-[40] flex flex-col pt-2.5 pr-2.5">
+                <button
+                    pButton
+                    type="button"
+                    icon="pi pi-times"
+                    class="p-button-text self-end mb-3"
+                    (click)="onCloseDialog()"
+                ></button>
                 <div class="flex-[80] flex flex-col gap-4 overflow-x-auto">
                     <app-comment
                         *ngFor="let comment of comments"
