--- a/src/app/pages/post-page/post-page.component.html
+++ b/src/app/pages/post-page/post-page.component.html
@@ -58,7 +58,7 @@
                 class="p-button-text"
             ></button>
             <div>
-                <p-confirmPopup #confirmPopupRef>
+                <!--                <p-confirmPopup #confirmPopupRef>
                     <ng-template pTemplate="headless" let-message let-test>
                         <div class="border-round p-3">
                             <span>{{ message.message }}</span>
@@ -68,11 +68,11 @@
                             </div>
                         </div>
                     </ng-template>
-                </p-confirmPopup>
+                </p-confirmPopup>-->
                 <button
                     pButton
                     type="button"
-                    (click)="confirm($event)"
+                    (click)="op.toggle($event)"
                     icon="pi pi-share-alt"
                     label="Partager"
                     class="p-button-text"
@@ -82,6 +82,32 @@
         <p class="text-gray-600 text-sm">{{ post?.likesCount }} like</p>
     </div>
 </div>
+<p-overlayPanel #op>
+    <div class="flex flex-col gap-3 w-25rem">
+        <div>
+            <span class="font-medium text-900 block mb-2">Partager ce post</span>
+            <p-inputGroup>
+                <input #urlInput pInputText [value]="url" readonly class="w-25rem" />
+                <p-inputGroupAddon class="cursor-pointer" (click)="copyLink(urlInput)">
+                    <i class="pi pi-copy"></i>
+                </p-inputGroupAddon>
+            </p-inputGroup>
+        </div>
+        <div>
+            <span class="font-medium text-900 block mb-2">Inviter à partager</span>
+            <div class="flex">
+                <p-chips disabled />
+                <p-button label="Invite" icon="pi pi-users" />
+            </div>
+        </div>
+        <!--        <div>
+            <span class="font-medium text-900 block mb-2">Test</span>
+            <ul class="list-none p-0 m-0 flex flex-column gap-3">
+                <li class="flex align-items-center gap-2"></li>
+            </ul>
+        </div>-->
+    </div>
+</p-overlayPanel>
 <app-comments-section
     [showDialog]="showComments"
     [postId]="postId"
