--- a/src/app/components/meet-selling/meet-selling.component.html
+++ b/src/app/components/meet-selling/meet-selling.component.html
@@ -1,10 +1,9 @@
-<div
-    class="mt-10 w-full h-72 flex flex-col gap-8 justify-center items-center bg-[var(--primary)] text-center bg-opacity-60 rounded-xl"
->
-    <h3 class="text-3xl text-black font-['Urbanist'] font-semibold">
-        {{ nbrPaid }} place{{ nbrPaid > 1 ? 's' : '' }} vendu{{ nbrPaid > 1 ? 'es' : '' }}
+<div class="relative mt-10 w-full h-72 flex flex-col gap-8 justify-center items-center text-center">
+    <div class="absolute inset-0 w-full h-72 bg-[var(--primary)] rounded-xl opacity-30 z-0"></div>
+    <h3 class="text-4xl text-[var(--primary)] font-['Urbanist'] font-semibold z-10">
+        Déjà {{ nbrPaid }} place{{ nbrPaid > 1 ? 's' : '' }} vendu{{ nbrPaid > 1 ? 'es' : '' }}
     </h3>
-    <p-avatarGroup styleClass="mb-3">
+    <p-avatarGroup styleClass="avatar-group">
         <p-avatarGroup styleClass="mb-3">
             <p-avatar
                 *ngFor="let user of users | slice: 0 : 10"
