--- a/src/app/pages/meet-page/meet-page.component.html
+++ b/src/app/pages/meet-page/meet-page.component.html
@@ -44,6 +44,7 @@
                 [canJoin]="canJoin"
                 [isLockedMeet]="isLocked"
                 [idMeet]="idMeet"
+                (reloadMeet)="reload()"
             ></app-meet-participants>
         </div>
         <button
