--- a/src/app/components/meet-participants/meet-participants.component.html
+++ b/src/app/components/meet-participants/meet-participants.component.html
@@ -42,7 +42,7 @@
                 class="p-button-rounded p-button-text"
             ></button>
         </div>
-        <button
+        <!--        <button
             pButton
             type="button"
             label="Inviter des amis"
@@ -50,7 +50,7 @@
             class="w-full"
             [disabled]="isLocked"
             [rounded]="true"
-        ></button>
+        ></button>-->
         <button
             pButton
             (click)="payMeet()"
