--- a/src/app/components/create-ticket/create-ticket.component.html
+++ b/src/app/components/create-ticket/create-ticket.component.html
@@ -33,7 +33,7 @@
             [placeholder]="
                 ticketRequest.groupSize
                     ? ticketRequest.groupSize.toString()
-                    : 'Séléctionne le nombre de personne'
+                    : 'Sélectionne le nombre de personne'
             "
         />
     </div>
@@ -49,7 +49,7 @@
             [virtualScrollItemSize]="38"
             optionLabel="label"
             [placeholder]="
-                ticketRequest.quantity ? ticketRequest.quantity.toString() : 'Séléctionne le stock'
+                ticketRequest.quantity ? ticketRequest.quantity.toString() : 'Sélectionne le stock'
             "
         />
     </div>
