fix pay meet ticket if meet has no ticket

--- a/src/app/components/meet-participants/meet-participants.component.html
+++ b/src/app/components/meet-participants/meet-participants.component.html
@@ -55,7 +55,7 @@
             pButton
             (click)="payMeet()"
             type="button"
-            [disabled]="hasPaid || isLocked"
+            [disabled]="hasPaid || isLocked || !hasTicketMeet"
             label="Je paye mon billet"
             class="w-full mt-6"
             [rounded]="true"
