--- a/src/app/pages/meet-page/meet-page.component.html
+++ b/src/app/pages/meet-page/meet-page.component.html
@@ -58,6 +58,7 @@
                 [isLockedMeet]="isLocked"
                 [idMeet]="idMeet"
                 [hasTicketMeet]="meet?.ticketId !== null"
+                [priceTicket]="amount"
                 (reloadMeet)="reload()"
             ></app-meet-participants>
             <div>
