--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -72,7 +72,7 @@
         >
             <div class="cart-total">
                 <h3 class="text-2xl">Total</h3>
-                <span class="text-2xl">{{ getTotal() }} €</span>
+                <span class="text-2xl">{{ getTotal }} €</span>
             </div>
             <div class="mt-6 h-[2px] w-full bg-white"></div>
             <button
@@ -90,4 +90,5 @@
     [paymentIntent]="paymentIntent"
     (closeDialog)="closeDialog()"
     (emitter)="updateCartItems()"
+    [amount]="getTotal"
 ></app-payment-card>
