fix search case

--- a/src/app/pages/search-page/search-page.component.html
+++ b/src/app/pages/search-page/search-page.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="w-full h-96 z-0 relative">
         <img
-            ngSrc="assets/search-city/background-search-city.png"
+            ngSrc="assets/search-city/background-monument.png"
             class="absolute object-cover opacity-70"
             alt="Monument Search"
             fill
@@ -15,7 +15,7 @@
                     type="text"
                     class="w-full"
                     pInputText
-                    placeholder="Cherche ce que te propose la France..."
+                    placeholder="Cherche les meilleurs endroits que te propose la France..."
                     (keyup.enter)="sortSearch()"
                 />
                 <i (click)="sortSearch()" class="pi pi-search cursor-pointer mr-4"></i>
