--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
         <div class="flex justify-center items-center gap-6">
             <i
                 *ngIf="!showSearchInput"
-                class="pi pi-search cursor-pointer text-lg text-white text-shadow"
+                class="pi pi-search cursor-pointer text-lg text-[var(--primary)] custom-shadow"
                 (click)="toggleSearchInput()"
             ></i>
             <div *ngIf="showSearchInput" class="p-toolbar-group-center">
