--- a/src/app/components/meet-participants/meet-participants.component.html
+++ b/src/app/components/meet-participants/meet-participants.component.html
@@ -1,7 +1,7 @@
 <p-card>
     <ng-template pTemplate="header">
         <div class="font-bold text-[var(--primary)] text-xl">
-            {{ nbrParticipants }} participants, {{ userCount }} actuellement
+            participants: {{ userCount }}/{{ nbrParticipants }}
         </div>
     </ng-template>
     <ng-template pTemplate="content">
