--- a/src/app/pages/meet-page/meet-page.component.html
+++ b/src/app/pages/meet-page/meet-page.component.html
@@ -21,8 +21,8 @@
             <h2 class="text-6xl text-[var(--primary)] font-bold font-['Urbanist']">
                 {{ meet?.title }}
             </h2>
-            <h4 class="font-['Urbanist'] text-[#5B5B5B] text-xl">
-                Meet<span class="text-xs">&nbsp;&nbsp;{{ date }}</span>
+            <h4 class="font-['Urbanist'] text-[#5B5B5B] text-3xl">
+                Meet du<span class="text-lg">&nbsp;&nbsp;{{ date }}</span>
             </h4>
             <p class="font-['Urbanist'] font-semibold leading-10 text-2xl">
                 {{ meet?.description }}
