--- a/src/app/components/meet-card-poi/meet-card-poi.component.html
+++ b/src/app/components/meet-card-poi/meet-card-poi.component.html
@@ -1,26 +1,46 @@
-<div [routerLink]="['/meets', link]" class="relative w-60 h-40 cursor-pointer">
-    <div class="text-white z-10 relative mt-14 ml-2 h-full">
-        <p class="text-sm text-shadow-sm shadow-black font-['Urbanist'] font-bold">
-            Meet {{ title }}
-        </p>
-        <p class="text-xs text-shadow-sm shadow-black font-['Urbanist']">
-            {{ description?.slice(0, 70) }}...
-        </p>
-        <p class="text-xs text-shadow-sm shadow-black font-['Urbanist'] font-bold">
-            {{ infoPlus }}
-        </p>
+<div class="p-card mt-8">
+    <div class="p-card-body">
+        <div class="image-container">
+            <img
+                [ngSrc]="
+                    image ??
+                    'https://www.timographie360.fr/photos/realisations/principal/vignettes/visite-virtuelle-arc-triomphe_80.jpg'
+                "
+                alt="Ticket avatar"
+                class="eiffel-image"
+                [loading]="'auto'"
+                (load)="isLoadingImage = false"
+                (error)="isLoadingImage = false"
+                fill
+            />
+        </div>
+        <div class="ticket-content">
+            <h2>{{ title }}</h2>
+            <p>{{ description }}</p>
+            <div class="ticket-info">
+                <img
+                    ngSrc="assets/poi/lightning_asset.png"
+                    alt="lightning bolt"
+                    width="20"
+                    height="20"
+                />
+                <span class="ml-2 text-xl">{{ totalParticipants }} Participants</span>
+            </div>
+            <div class="price-button">
+                <span *ngIf="priceTicketsParsed" class="price">{{
+                    priceTicketsParsed ? priceTickets + '€' : 'Pas de billet'
+                }}</span>
+                <button
+                    [disabled]="!isLogged"
+                    pButton
+                    type="button"
+                    (click)="goToMeet()"
+                    label="Voir le meet"
+                ></button>
+            </div>
+            <span class="text-xl font-['Urbanist'] text-[var(--primary)] mt-2 font-semibold"
+                >Date: {{ dateParsed }}</span
+            >
+        </div>
     </div>
-    <img
-        [ngSrc]="
-            image ??
-            'https://www.timographie360.fr/photos/realisations/principal/vignettes/visite-virtuelle-arc-triomphe_80.jpg'
-        "
-        alt="avatar"
-        class="object-cover rounded-xl z-0"
-        fill
-        [loading]="'auto'"
-        (load)="isLoadingImage = false"
-        (error)="isLoadingImage = false"
-    />
-    <div class="spinner" *ngIf="isLoadingImage">Loading...</div>
 </div>
