create, get, update, delete my quests okay

--- a/src/app/pages/profil-page/profil-page.component.html
+++ b/src/app/pages/profil-page/profil-page.component.html
@@ -55,6 +55,13 @@
                     >
                         Mon quiz
                     </li>
+                    <li
+                        *ngIf="userType === 1 || userType === 3"
+                        [class.active]="activeTab === 'quest'"
+                        (click)="setActiveTab('quest')"
+                    >
+                        Missions
+                    </li>
                     <li [class.active]="activeTab === 'profile'" (click)="setActiveTab('profile')">
                         Mon profil
                     </li>
@@ -79,6 +86,9 @@
             </ng-container>
             <ng-container *ngSwitchCase="'quiz'">
                 <app-my-quiz></app-my-quiz>
+            </ng-container>
+            <ng-container *ngSwitchCase="'quest'">
+                <app-my-quests></app-my-quests>
             </ng-container>
         </div>
     </div>
