--- a/src/app/components/information-user/information-user.component.html
+++ b/src/app/components/information-user/information-user.component.html
@@ -91,7 +91,7 @@
         pButton
         type="button"
         class="text-white bg-[color:var(--error)] m-auto"
-        label="Supprimer L'ami"
+        label="Supprimer l'ami"
         *ngIf="user?.isFriend"
         (click)="visible = true"
     ></button>
