--- a/src/app/components/post-card-feed/post-card-feed.component.html
+++ b/src/app/components/post-card-feed/post-card-feed.component.html
@@ -20,7 +20,10 @@
         </ng-template>
         <div class="flex flex-col gap-2">
             <div class="flex flex-row justify-between text-sm">
-                <p>{{ city }}, France</p>
+                <p>
+                    <span class="font-semibold italic">&#64;{{ post.createdBy?.username }}</span
+                    >&nbsp;&nbsp;{{ city }}, France
+                </p>
                 <div class="flex flex-row items-center gap-2">
                     <p>{{ dateParsed[0] }}</p>
                     <svg
